<resources>
    <string name="app_name">Planetary</string>

    <string name="preference_key_file">UserPreferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_the_solar_system">Explore The Solar System.</string>
    <string name="get_started">Get Started</string>
    <string name="space_exploration">Space Exploration</string>
    <string name="space_exploration_summary">Space exploration is the use of astronomy and space technology to explore outer space.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="planetary_understanding">Planetary Understanding</string>
    <string name="planetary_understanding_text">Experiments performed in space help us understand the health problems associated with aging and sedentary lifestyles.</string>
    <string name="climate_change_notice">Climate Change Notice</string>
    <string name="climate_change_notice_text">Some satellites monitor signs of climate change, such as melting ice and rising waters.</string>
    <string name="explore_now">Explore Now</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_acct_caption">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name_hint">Enter Fullname eg (Onwe Sunday C)</string>
    <string name="existing_acct_caption">Already have an account?</string>
    <string name="summary_text">Ceres is the largest object in the main asteroid belt that lies between the orbits of Mars and Jupiter. With a diameter of 940 km, Ceres is both the largest of the asteroids and the only dwarf planet inside Neptune\'s orbit. It is the 25th-largest body in the Solar System within the orbit of Neptune.</string>
    <string name="unavaliable">Unavailable</string>
</resources>